use blocked windows instead of availability windows
